--- a/image-upload/views/index.hbs
+++ b/image-upload/views/index.hbs
@@ -3,6 +3,9 @@
 	<h2>{{title}}</h2>
 	<h4>{{description}}</h4>
 	<img src="{{imgPath}}" alt="Poster for {{title}}" height="200px">
+	<h3>Delete this movie 
+		<a href="/movie/delete/{{_id}}">❌</a>
+	</h3>
 {{else}}
 	<h2>There are no movies yet 🙀</h2>
 {{/each}}
